--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Lato:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/26ebc0bb8b.js" crossorigin="anonymous"></script>
     <title>Alyshia's Portfolio</title>
 </head>
 <body>
     <section class="hero">
         <nav>
             <img class="logo" src="src/images/A·H.png" alt="Alyshia's logo"/>
-            <ul>
+            <ul id="nav-list">
                 <li><a class="navigation-link" href="https://www.linkedin.com/in/alyshia-ho-966676194/">About me</a></li>
                 <li><a class="navigation-link" href="#projects">Projects</a></li>
                 <li><a class="navigation-link">Contact</a></li> 
             </ul>
+            <button class="hamburger" id="hamburger">
+                <i class="fas fa-bars"></i>
+
+            </button>
         </nav>
         <div class="hero-area">
             <div class="hero-text">
@@ -30,7 +34,6 @@
             </div>
         </div>
     </section>
-
     <section class="sub-section-alternative" id="#projects">
         <h2>Projects</h2>
         <div class="project-container">
@@ -63,12 +66,11 @@
                 <p class=""subtext"><a class="project-link" href="https://www.behance.net/gallery/134877909/EME-Architecture-Brand-Design?tracking_source=search_projects">View here</a></p>
             </div>
         </div>
-
     </section>
-    <footer></footer>
-
-
-    
+    <footer>
+        <h2>Contact me</h2>
+        <p>example@email.com</p>
+    </footer>
     <script src="src/app.js"></script>  
 </body>
 </html>
